# hal-harness

./: .env.template  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  azure_entrypoint.sh  batch_ssh.sh  docker_runner.py  logging-plan.md  pyproject.toml  requirements.txt  setup.py
.github/scripts/: corebench_hard_upload.schema.json
.github/workflows/: claude-code-review.LMY  claude-code-review.yml  e2e.yml  hal-eval-corebench-vm.yml  pytest.yml  ruff.yml
agent_eval_harness/: .env  agent_runner.py  benchmark_manager.py  cli.py  config.yaml  inspect_runner.py  scratch.py
agent_eval_harness/benchmarks/: appworld.py  base_benchmark.py  inspect_benchmark.py  mlagentbench.py  swe_bench.py  swebench.py  swebench_harness.py  usaco.py
agent_eval_harness/example_agent/: agent.py
agent_eval_harness/inspect/: README.md  agent.py  inspect.py
agent_eval_harness/utils/: azure_utils.py  config.py  local_runner.py  logging_utils.py  setup_vm.sh  upload.py  utils.py  validation.py  vm_runner.py  weave_utils.py
agents/: README.md  RUN_AGENTS.md
agents/Moatless/: main.py
agents/USACO/: .gitignore  README.md  evaluate.py  evaluate_solution_sets.py  main.py  models.py  requirements.txt  run_usaco.py  utils.py
agents/appworld_agent/: main.py  requirements.txt
agents/appworld_example_agent/: main.py  requirements.txt
agents/assistantbench_browser_agent/: Makefile  main.py  requirements.txt
agents/assistantbench_example_agent/: agent.py  main.py  output.json  requirements.txt
agents/claude_code_agent/: main.py
agents/codex_agent/: main.py
agents/colbench_example_agent/: code_agent_prompt.txt  html_agent_prompt.txt  main.py  requirements.txt
agents/core_agent/: agent_hints.py  main.py  model_prices.py  requirements.txt
agents/core_agent_optimized/: agent_hints.py  main.py  requirements.txt
agents/cybench_example_agent/: main.py
agents/example_reliability_agent/: README.md  main.py  requirements.txt
agents/gaia_cot_agent/: main.py
agents/gaia_cot_groq/: main.py
agents/gaia_example_agent/: main.py
agents/gaia_groq_agent/: main.py
agents/gaia_ollama_agent/: main.py  requirements.txt
agents/gaia_plain_groq/: main.py
agents/gsm8k_cot_groq/: main.py
agents/gsm8k_plain_groq/: main.py
agents/hal_generalist_agent/: main.py  mdconvert.py  model_prices.py  prompts.py  requirements.txt
agents/hal_test_agent/: main.py  requirements.txt
agents/inspect/: agentharm.py  custom_agent.py  cvebench_agent.py  cybench.py  gaia.py  solver_agent.py
agents/inspect-task/: custom_agent.py  solver_agent.py  task.py
agents/list_files_agent/: main.py
agents/mobilesafetybench/: _base.py  _scot.py  main.py  requirements.txt
agents/openai_codex_agent/: main.py  requirements.txt
agents/openclaw_agent/: main.py  requirements.txt
agents/opencode_agent/: main.py  opencode_setup.py  prompts.py
agents/replicatorbench_agent/: CONTRIBUTING.md  Makefile  README.md  main.py  pytest.ini  requirements-dev.txt
agents/sab_example_agent/: litellm_engine.py  main.py  requirements.txt  science_agent.py
agents/scicode_agent/: agent.py  main.py
agents/scicode_codex_agent/: main.py  requirements.txt
agents/scicode_example_agent/: agent.py  hard_prompt_template.txt  main.py  requirements.txt
agents/scicode_tool_calling_agent/: agent.py  hard_prompt_template.txt  main.py  prompt_template.txt  requirements.txt
agents/scicode_zero_shot_agent/: main.py  main_responses.py  prompt_template.txt  requirements.txt
agents/swebench_diff_groq/: main.py
agents/swebench_example_agent/: agent.py  main.py
agents/swebench_gemini_diff/: main.py
agents/swebench_lite_example_agent/: agent.py
agents/swebench_ollama_diff/: main.py
agents/swebench_ollama_plain/: main.py
agents/swebench_plain_groq/: main.py
agents/taubench/: react.py  tool_calling.py
agents/taubench_example_agent/: main.py  react.py
agents/taubench_few_shot/: few_shot.py  requirements.txt
agents/taubench_react/: react.py
agents/tessera_agent/: main.py  (+1 more)
azure_functions/: azure_cost_report.py  deploy.sh  function_app.py  requirements.txt
benchmarks/: README.md
docs/: EXECUTION_FLOW.md
example_agent/: agent.py
hal/: agent_runner.py  benchmark_manager.py  cli.py  generalist_cli.py  inspect_runner.py  logging_manager.py  terminal_bench_harbor.py  test_cli.py  test_command.py  upload_manager.py
prefect/: QUICKSTART.md  README.md  add_confidence.py  batch.py  compile_results.py  config.py  finalize_compiled.py  flow.py  flow_template.py  plan-azure-batch.md  pool.json  regrade.py  requirements.txt  run_evals.py  storage.py  sync_reliability_k5.py  tasks.py  upload_capsules.py  upload_compiled.py
reliability_eval/: README.md  __init__.py  analyze_compliance.py  analyze_consistency.py  analyze_fault_eval.py  analyze_predictability.py  analyze_prompt_sensitivity.py  analyze_reliability.py  analyze_structural_robustness.py  config.py  constants.py  reliability_evaluation_changes.md  requirements.txt  run_compliance_eval.py  run_consistency_eval.py  run_predictability_eval.py  run_reliability_eval.py  types.py
scripts/: generate_vm_ssh_command.py  test_opencode_install.py  test_opencode_install.sh
tests/: test_hal_test_cli.py  test_runner_rate_limit.py
todos/: 001-pending-p1-prompt-injection-safety-analysis.md  002-pending-p1-input-exit-blocks-agent-use.md  003-complete-p1-harm-ref-dead-parameter.md  004-complete-p1-duplicate-trajectory-algorithms.md  005-complete-p2-agent-py-mixed-responsibilities.md  006-complete-p2-detect-abstention-wrong-layer.md  007-complete-p2-safety-phase-closure-data-race.md  008-complete-p2-md5-cache-key-sha256.md  009-complete-p2-agent-function-validation.md  010-complete-p2-update-typing-imports.md  011-complete-p2-phase-settings-unused.md  012-pending-p3-atomic-write-safety-results.md  013-pending-p3-sys-path-warnings-cleanup.md
v2/: AZURE_MONITOR_AGENT_SETUP.md  DOCKER_LOGGING_PLAN.md  README.md  azure_manager.py  azure_virtual_machine.py  bicep_manager.py  logging_utils.py  requirements.txt  run_docker_on_vm.py  virtual_machine_cloud_init.yaml
(+328 files in other folders)
