[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hal"
version = "0.1.0"
description = "Agent evaluation harness with optional benchmark support"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "weave==0.51.32",
    "huggingface-hub",
    "python-dotenv",
    "setuptools>=48.0.0",
    "inspect_ai @ git+https://github.com/UKGovernmentBEIS/inspect_ai@d3a242f74c8a4f42a86d1219eaca12ab620c3be2",
    "inspect-evals @ git+https://github.com/benediktstroebl/inspect_evals",
    "azure-mgmt-compute>=29.1.0",
    "azure-mgmt-network>=25.1.0",
    "azure-mgmt-resource>=23.0.1",
    "azure-identity>=1.12.0",
    "paramiko==3.5.0",
    "tenacity>=8.2.0",
    "docker>=7.1.0",
    "cryptography>=42.0.0",
    "boto3>=1.36.23",
    "litellm>=1.61.17",
]

[project.optional-dependencies]
taubench = [
    "tau-bench @ git+https://github.com/benediktstroebl/tau-bench@3e187bda4dfa3e8936aebd44a579f6d1238ce55e",
]

[project.scripts]
hal-eval = "hal.cli:main"
hal-upload = "hal.utils.upload:upload_results"
hal-decrypt = "hal.utils.decrypt:decrypt_cli"

[tool.setuptools]
packages = ["hal"]
